--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <!--Login e registro-->
                 <div id="form-container">
                     <div id="form-box"> 
-                        <img src="img/logo_instagram.png" alt="Instagram"/>
+                        <img id="logo-insta" src="img/logo_instagram.png" alt="Instagram"/>
                         <form id="login-form">
                             <input type="text" name="username" placeholder="Número de telefone, usuário ou e-mail"
                             />
@@ -28,9 +28,11 @@
                                 <span>Ou</span>
                             </div>
                             <div id="other-links">
-                                <div class="facebook-login">
-                                    <img src="img/logo_facebook.svg" alt="Facebook Login"/>
-                                    <span>Entrar com o Facebook</span>
+                                <div id="facebook-login">
+                                    <a href="#">
+                                        <img src="img/logo_facebook.svg" alt="Facebook Login"/>
+                                        <span>Entrar com o Facebook</span>
+                                    </a>
                                 </div>
                                 <div id="forgot-pass">
                                     <a href="#">Esqueceu a senha?</a>
@@ -69,7 +71,7 @@
                     <li><a href="#">Instagram Lite</a></li>
                 </ul>
             </nav>
-            <p id="copyrigth">&copy;2024 Instagram for Meta</p>
+            <p id="copyright">&copy;2024 Instagram for Meta</p>
         </footer>
     </body>
 </html>
